Commit assets and templates

--- a/index.html
+++ b/index.html
@@ -1,1 +1,78 @@
-Hello World
+<!DOCTYPE HTML>
+<!--
+	Dimension by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Veille technologique ECL</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
+
+		<!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Header -->
+					<header id="header">
+						<div class="logo">
+							<span class="icon fa-gem"></span>
+						</div>
+						<div class="content">
+							<div class="inner">
+								<h1>Intelligence artificielle et transition énergétique</h1>
+								<h2>Smart cities: Applications et Perspectives</h2>
+								<h3>Auteur: Yasmina Kerkeb</h3>
+							</div>
+						</div>
+						<nav>
+							<ul>
+								<li><a href="#intro">Introduction</a></li>
+								<li><a href="leviers.html">Application</a></li>
+								<li><a href="derives.html">Dérives</a></li>
+								<li><a href="perspectives.html">Perspectives</a></li>
+								<!--<li><a href="#elements">Elements</a></li>-->
+							</ul>
+						</nav>
+					</header>
+
+				<!--Main -->
+				<div id="main">
+					<!-- Intro -->
+					
+					<article id="intro">
+						<h2 class="major">Introduction</h2>
+						<span class="image main"><img src="images/intro-pic.png" alt="" /></span>
+						<p>La transition énergétique est un sujet de plus en plus d'actualité.</p>
+						<h2 class="major">Transition énergétique</h2>
+						La transition énergétique, d'après le rapport 2019 de l'Institut Montaigne, vise à transformer les modes de production et de consommation d’énergie, dans l’objectif de pérenniser les usages énergétiques qui ont contribué au développement humain, tout en diminuant les émissions de GES
+						<span class="image main"><img src="images/transition-pic.jpg" alt="" /></span>
+						<h2 class="major">Concept des Smart cities</h2>
+					</article>
+					
+				</div>
+
+
+				<!-- Footer -->
+					<footer id="footer">
+						<p class="copyright">&copy; YasminaKerkeb. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+					</footer>
+
+			</div>
+
+		<!-- BG -->
+			<div id="bg"></div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
+</html>
