--- a/index.html
+++ b/index.html
@@ -22,13 +22,9 @@
 					<nav id="nav">
 						<ul>
 							<li class="current"><a href="index.html">Accueil</a></li>
-							<li class="submenu">
-								<a href="#">Smart Cities</a>
-								<ul>
-									<li><a href="Smart-Grids.html">Smart Grids</a></li>
-									<li><a href="Smart-Mobility.html">Smart Mobility</a></li>
-								</ul>
-							</li>
+							<li class="current"><a href="Smart-Grids.html">Smart Grids</a></li>
+							<li class="current"><a href="Smart-Mobility.html">Smart Mobility</a></li>
+							
 							<li class="current"><a href="IA-modeles.html">En savoir plus</a></li>
 							<li class="current"><a href="Bibliographie.html">Bibliographie</a></li>
 							
