Update IA models

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 					<header class="special container">
 						
-						<h2>Introduction</h2>
+						<h2>Présentation</h2>
 					</header>
 
 					<!-- One -->
@@ -78,6 +78,7 @@
 							<p>La smart city s’appuie sur le développement massif des technologies de l’information (notamment l'intelligence artificielle) et une meilleure analyse des données pour diminuer l’empreinte carbone de la ville et proposer un cadre de vie durable à ses citoyens.
 
 							A la croisée de la révolution numérique et de la transition énergétique, elle valorise ainsi les énergies locales via le développement d'énergies renouvelables, et crée un environnement intelligent et écologique, pour offrir de nouveaux services aux habitants et contribuer à leur bien-être durable.</p>
+							<p> Enfin, le but de cette veille technologique sera de présenter les domaines d’application de l’intelligence artificielle dans la conception des “Smart Cities” via deux leviers principaux: Smart Grids et Smart Mobility.</p>
 						</section>
 
 					<!-- Two -->
