--- a/IA-modeles.html
+++ b/IA-modeles.html
@@ -71,7 +71,7 @@
 												<a href="#" class="image featured">
 													<figure>
 														<img src="images/svm.png" height="250" alt="" />
-														<figcaption> <center>Séparation des points par une frontière optimale </center> </figcaption>
+														<figcaption> <center>Séparation des points par une frontière optimale [12]</center> </figcaption>
 													</figure>
 												</a>
 											</section>
@@ -91,9 +91,9 @@
 													<a href="#" class="image featured">
 														<figure>
 															<img src="images/fuz_logic_1.png"  alt="" />
-															<figcaption> <center>Exemple d'utilisation de la technique Fuzzy Logic </center> </figcaption>
+															<figcaption> <center>Exemple d'utilisation de la technique Fuzzy Logic [14] </center> </figcaption>
 															<img src="images/fuz_logic_2.png"  alt="" />
-															<figcaption> <center>Schéma d'implémentation de Fuzzy Logic</center> </figcaption>
+															<figcaption> <center>Schéma d'implémentation de Fuzzy Logic [14]</center> </figcaption>
 														</figure>
 													</a>
 													
@@ -103,7 +103,7 @@
 													<header>
 														<h3>5. Les Expert Systèmes</h3>
 													</header>
-													Les systèmes experts sont des approches fondées sur des règles basées sur des connaissances prédéfinies [13]. Ils sont couramment appliqués à la prise de décision par déduction logique. Les SE imitent le comportement des experts humains qui résolvent des problèmes. Plus spécifiquement, ils stockent des connaissances sur un domaine donné et peuvent résoudre des problèmes en utilisant une déduction logique sur ces connaissances. Les SE sont généralement utilisés dans les télécommunications, la médecine, la comptabilité et les transports
+													Les systèmes experts sont des approches fondées sur des règles basées sur des connaissances prédéfinies. Ils sont couramment appliqués à la prise de décision par déduction logique. Les SE imitent le comportement des experts humains qui résolvent des problèmes. Plus spécifiquement, ils stockent des connaissances sur un domaine donné et peuvent résoudre des problèmes en utilisant une déduction logique sur ces connaissances. Les SE sont généralement utilisés dans les télécommunications, la médecine, la comptabilité et les transports
 												</section>
 											</section>
 										</div>
@@ -117,7 +117,7 @@
 												<a href="#" class="image featured">
 													<figure>
 														<img src="images/neural_network.png" alt="" />
-														<figcaption> <center>Réseau de neurones multi-couches (ou Perceptron multi-couches)</center> </figcaption>
+														<figcaption> <center>Réseau de neurones multi-couches (ou Perceptron multi-couches)[3]</center> </figcaption>
 													</figure>
 												</a>
 											</section>
@@ -131,7 +131,11 @@
 											</section>
 
 											<section>
-												<a href="#" class="image featured"><img src="images/GA.png" alt="" /></a>
+												
+												<figure>
+													<img src="images/GA.png" alt="" />
+													<figcaption> <center>Structure et fonctionnement d'un algorithme génétique[13]</center> </figcaption>
+												</figure>
 											</section>
 
 											<section>
