--- a/Smart-Grids.html
+++ b/Smart-Grids.html
@@ -78,7 +78,7 @@
 												<a href="#" class="image featured">
 													<figure>
 														<img src="images/smart-management-pic.png" alt="" />
-														<figcaption> <center>Classification des algorithmes de prédiction de demande énergétique à court terme</center> </figcaption>
+														<figcaption> <center>Classification des algorithmes de prédiction de demande énergétique à court terme [3]</center> </figcaption>
 													</figure>
 												</a>
 											</section>
@@ -103,7 +103,7 @@
 												<a href="#" class="image featured">
 													<figure>
 														<img src="images/smart-monitoring-review.png" alt="" />
-														<figcaption> <center>Algorithmes de machine learning pour une Maintenance Intelligente.</center> </figcaption>
+														<figcaption> <center>Algorithmes de machine learning pour une Maintenance Intelligente [5]</center> </figcaption>
 													</figure>
 												</a>
 											</section>
