--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Intelligence artificielle et transition énergétique</h2>
-									<h3>Smart cities: Applications et Perspectives</h3>
+									<h3>Applications dans le concept des Smart Cities</h3>
 									
 								</div>
 							</div>
