--- a/Smart-Grids.html
+++ b/Smart-Grids.html
@@ -54,6 +54,10 @@
 						<section class="wrapper style4 container">
 
 							<div class="row gtr-150">
+								<section>
+								<p> Un système énergétique intelligent est un système énergétique rentable, durable et sûr dans lequel la production, les infrastructures et la consommation d'énergie renouvelable sont intégrées et coordonnées par le biais de services énergétiques, d'utilisateurs actifs et de technologies habilitantes. </p>
+								<p> Parmi les principaux axes d'intérêts: </p>
+								</section>
 								<div class="col-6 col-12-narrower">
 
 									<!-- Sidebar -->
