--- a/Smart-Mobility.html
+++ b/Smart-Mobility.html
@@ -119,7 +119,7 @@
 											</section>
 
 											<section>
-												<h2 class="major">2. Gestion du traffic</h2>
+												<h2 class="major">2. Gestion du trafic</h2>
 												<p>Ces systèmes sont principalement consacrés à la prédiction des flux de trafic grâce aux données de trafic collectées par l'infrastructure ou les véhicules eux-mêmes. </p>
 												<p>Les réseaux de neurones artificiels sont  les  algorithmes plus fréquemment utilisées pour contrôler le trafic et prédire les comportements de mobilités. Des travaux ont été notamment conduits à l'aide d'ANNs pour prédire le trafic à court terme.</p>
 											</section>
