--- a/IA-modeles.html
+++ b/IA-modeles.html
@@ -108,7 +108,7 @@
 
 												<section>
 													<header>
-														<h3>5. Les Expert Systèmes</h3>
+														<h3>5. Les Systèmes Experts</h3>
 													</header>
 													Les systèmes experts sont des approches fondées sur des règles basées sur des connaissances prédéfinies. Ils sont couramment appliqués à la prise de décision par déduction logique. Les SE imitent le comportement des experts humains qui résolvent des problèmes. Plus spécifiquement, ils stockent des connaissances sur un domaine donné et peuvent résoudre des problèmes en utilisant une déduction logique sur ces connaissances. Les SE sont généralement utilisés dans les télécommunications, la médecine, la comptabilité et les transports
 												</section>
